[tool.poetry]
name = "feedsieve"
version = "1.0.0"
description = "Content filtering and management system for feeds"
authors = ["Terry Ma <terry.o.ma@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
sqlalchemy = "^2.0.23"
aiosqlite = "^0.19.0"
httpx = "^0.25.2"
python-multipart = "^0.0.6"
pyyaml = "^6.0.1"
requests = "^2.32.4"
pydantic-settings = "^2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
